--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,4 +5,6 @@
     <p><%= link_to "プロフィール編集", edit_user_path %></p>
   <% end %>
 </div>
-<%= render 'post_images/list', post_images: @post_images %>
+<div>
+  <%= render 'post_images/list', post_images: @post_images %>
+</div>
