--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,30 +1,1 @@
-<h1>User List</h1>
-<table class="table">
-  <thead>
-      <td>image</td>
-      <td>name</td>
-      <td colspan="4"></td>
-    </thead>
-  <% @users.each do |user| %>
-    <tbody>
-      <td>
-        <%= image_tag user.get_profile_image(100,100) %>
-      </td>
-      <td>
-        <%= link_to user_path(user.id) do %>
-          <%= user.name %>
-        <% end %>
-      </td>
-      <td>投稿数:<%= user.post_images.count %></td>
-      <td>フォロー数:<%= user.followings.count %></td>
-      <td>フォロワー数:<%= user.followers.count %></td>
-      <td>
-        <% if user.id != current_user.id %>
-          <%= render "relationships/follow-btn", user: user %>
-        <% else %>
-          <%= link_to "プロフィール編集", edit_user_path(user.id) %>
-        <% end %>
-      </td>
-    </tbody>
-  <% end %>
-</table>
+<%= render "list", users:@users %>
