--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,9 @@
             </li>
             <% else %>
             <li class="nav-item">
+              <%= link_to "About", about_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
               <%= link_to "新規登録", new_user_registration_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
@@ -53,6 +56,16 @@
     </header>
     <main class="mb-auto">
       <div class="container">
+        <% if user_signed_in? %>
+          <div class="search_form">
+            <%= form_with url: search_path, local: true, method: :get do |f| %>
+              <%= f.text_field :word %>
+              <%= f.select :range, options_for_select([['ユーザー','User'], ['投稿','PostImage']]) %>
+              <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["前方一致","forward_match"],  ["後方一致","backward_match"], ["部分一致","partial_match"]]) %>
+              <%= f.submit "検索", class: "btn btn-primary" %>
+            <% end %>
+          </div>
+        <% end %>
         <%= yield %>
       </div>
     </main>
