--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
     <main class="mb-auto">
       <div class="container">
         <% if user_signed_in? %>
-          <div class="search_form">
+          <div class="search_form text-center">
             <%= form_with url: search_path, local: true, method: :get do |f| %>
               <%= f.text_field :word %>
               <%= f.select :range, options_for_select([['ユーザー','User'], ['投稿','PostImage']]) %>
