--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -11,19 +11,7 @@
     <% if @post_image.user == current_user %>
       <%= link_to "削除", post_image_path(@post_image), method: :delete, class: "btn btn-danger" %>
     <% end %>
-    <% if @post_image.favorited_by?(current_user) %>
-      <p>
-        <%= link_to post_image_favorites_path(@post_image), method: :delete do %>
-          ♥<%= @post_image.favorites.count %> いいね
-        <% end %>
-      </p>
-      <% else %>
-      <p>
-        <%= link_to post_image_favorites_path(@post_image), method: :post do %>
-          ♡<%= @post_image.favorites.count %> いいね
-        <% end %>
-      </p>
-    <% end %>
+    <div class="favorite-btn"><%= render "favorites/favorite-btn", post_image: @post_image %></div>
     <p>コメント件数:<%= @post_image.post_comments.count %></p>
   </div>
 </div>
