--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,9 +40,6 @@
             </li>
             <% else %>
             <li class="nav-item">
-              <%= link_to "About", about_path, class: 'nav-link text-dark' %>
-            </li>
-            <li class="nav-item">
               <%= link_to "新規登録", new_user_registration_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
@@ -80,7 +77,7 @@
             <h6 class="text-white mt-2 mb-3">Link</h6>
             <ul class="p-0 list-unstyled">
               <li>
-                <a href="" title="About" class="text-white-50">会社概要</a>
+                <%= link_to "会社概要", about_path, class: 'text-white-50' %>
               </li>
               <li>
                 <a href="" title="License informations" class="text-white-50">プライバシーポリシー</a>
