--- a/app/views/post_images/_list.html.erb
+++ b/app/views/post_images/_list.html.erb
@@ -17,6 +17,7 @@
             </p>
             <p class="card-text">説明：<%= post_image.caption %></p>
             <span><i class="fas fa-user"></i> By <%= post_image.user.name %> ｜ </span>
+            <span class="favorite-btn_<%= post_image.id %>"><%= render "favorites/favorite-btn", post_image: post_image %></span>
             <span><%= link_to "#{post_image.post_comments.count} コメント", post_image_path(post_image.id), class:"text-dark" %></span>
           </div>
         </div>
