--- a/app/views/post_images/_list.html.erb
+++ b/app/views/post_images/_list.html.erb
@@ -5,7 +5,7 @@
         <%= link_to post_image_path(post_image.id) do %>
           <%= image_tag post_image.get_image(400,300), class:"card-img-top"; %>
         <% end %>
-        <div class="card-body">
+        <div class="card-body pb-0">
           <div class="">
             <%= image_tag post_image.user.get_profile_image(80,80), class:"mt-3 rounded-circle"; %>
           </div>
@@ -17,8 +17,8 @@
             </p>
             <p class="card-text">説明：<%= post_image.caption %></p>
             <span><i class="fas fa-user"></i> By <%= post_image.user.name %> ｜ </span>
-            <span class="favorite-btn_<%= post_image.id %>"><%= render "favorites/favorite-btn", post_image: post_image %></span>
             <span><%= link_to "#{post_image.post_comments.count} コメント", post_image_path(post_image.id), class:"text-dark" %></span>
+            <span class="favorite-btn_<%= post_image.id %>"><%= render "favorites/favorite-btn", post_image: post_image %></span>
           </div>
         </div>
       </div>
