[Fix]mainの上下余白

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
         </div>
       </nav>
     </header>
-    <main class="mb-auto">
+    <main class="my-2">
       <div class="container">
         <% if user_signed_in? %>
           <div class="search_form text-center">
