--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -34,17 +34,6 @@
     </tr>
   <% end %>
 </table>
-<div>
-  <% if @post_comment.errors.any? %>
-    <%= @post_comment.errors.count %>件のエラーが発生しました
-    <ul>
-      <% @post_comment.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-  <% end %>
-  <%= form_with model: [@post_image, @post_comment] do |f| %>
-    <%= f.text_area :comment, rows: '5', cols:'40', placeholder: "コメントをここに" %>
-    <%= f.submit "送信する", class: "btn btn-success" %>
-  <% end %>
+<div class="comment-form">
+  <%= render "post_comments/comment-form", post_comment: @post_comment, post_image: @post_image %>
 </div>
