--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body class="d-flex flex-column vh-100">
@@ -27,6 +28,11 @@
         <% end %>
         <%= yield %>
       </div>
+      <span id="back">
+        <a href="#">
+          <%= image_tag ("arrow.png") %>
+        </a>
+      </span>
     </main>
     <%= render "layouts/footer" %>
   </body>
