--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,26 +12,26 @@
         <ul class="navbar-nav ml-auto">
         <% if user_signed_in? %>
         <li class="nav-item">
-          <%= link_to 'マイページ', user_path(current_user.id), class: 'nav-link text-dark' %>
+          <%= link_to 'マイページ', user_path(current_user.id), class: 'headerlink nav-link text-dark' %>
         </li>
         <li class="nav-item">
-          <%= link_to '投稿フォーム', new_post_image_path, class: 'nav-link text-dark' %>
+          <%= link_to '投稿フォーム', new_post_image_path, class: 'headerlink nav-link text-dark' %>
         </li>
         <li class="nav-item">
-          <%= link_to 'ユーザー一覧', users_path, class: 'nav-link text-dark' %>
+          <%= link_to 'ユーザー一覧', users_path, class: 'headerlink nav-link text-dark' %>
         </li>
         <li class="nav-item">
-          <%= link_to '投稿一覧', post_images_path, class: 'nav-link text-dark' %>
+          <%= link_to '投稿一覧', post_images_path, class: 'headerlink nav-link text-dark' %>
         </li>
         <li class="nav-item">
-          <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %>
+          <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'headerlink nav-link text-dark' %>
         </li>
         <% else %>
         <li class="nav-item">
-          <%= link_to "新規登録", new_user_registration_path, class: 'nav-link text-dark' %>
+          <%= link_to "新規登録", new_user_registration_path, class: 'headerlink nav-link text-dark' %>
         </li>
         <li class="nav-item">
-          <%= link_to "ログイン", new_user_session_path, class: 'nav-link text-dark' %>
+          <%= link_to "ログイン", new_user_session_path, class: 'headerlink nav-link text-dark' %>
         </li>
         <% end %>
         </ul>
